not needed due to undertow upgrade